--- a/hibernate/3.6.10.Final/hibernate-core/pom.xml
+++ b/hibernate/3.6.10.Final/hibernate-core/pom.xml
@@ -33,8 +33,8 @@
         <relativePath>../hibernate-parent/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.hibernate</groupId>
     <artifactId>hibernate-core</artifactId>
+    <version>3.6.10.Final-pipan</version>
     <packaging>jar</packaging>
 
     <name>Hibernate Core</name>
